Align fixed for multiple trans,and minor updates

--- a/src/components/phase1/Topbar_footer/Topbar.css
+++ b/src/components/phase1/Topbar_footer/Topbar.css
@@ -125,8 +125,8 @@ body {
   padding-top: 120px;
   background: none;
   background-color: #0e2431;
-  height: 85vh;
-  width: 100%;
+  height: 55vh;
+  width: 1170px;
   transform: translate(-150%);
   display: flex;
   flex-direction: column;
@@ -151,7 +151,7 @@ body {
   position: absolute;
   display: inline-block;
   text-align: center;
-  margin-left: 43%;
+  margin-left: 30%;
   color: #0e2431;
 
 }
@@ -161,7 +161,7 @@ body {
 
   .logo {
     text-align: center;
-    margin-left: 36%;
+    margin-left: 10%;
     display: inline-block;
 
   }
